# FAIRFluids

./: .gitignore  CONVERSION_SUMMARY.md  FAIRFluids_ThermoML_Mapping.md  MANIFEST.in  README.md  cli.py  create_fairfluids_document copy.ipynb  create_fairfluids_document.ipynb  create_lib_and_mermaid.sh  environment.yml  fairfluids_model.json  install_conda.bat  install_conda.sh  match_compounds.py  pubchem.ipynb  pyproject.toml  requirements-conda.txt  requirements.txt  setup.py  test_compound_identifiers.py  test_final_validation.py  test_mole_fractions.py  test_simple_import.py  thermoml_to_fairfluids_converter_improved.py  validate_fairfluids_output.py  workflow.ipynb
FAIRFluids/: ChCl_urea_model.json  chcl_glycerol.json  create_fairfluids_document.ipynb  fairfluids_model.json  test_import.py
FAIRFluids/core/: functionalities.py  lib.py  pydantic.py  visualization.py
FAIRFluids/data/cml_xml/: ChCl.xml  ChCl_glycerol.xml  ChCl_urea.xml  N,N-diethylethanol ammonium chloride_glycerol.xml  ethylene glycol_DOI1.xml  glycerol_DOI2.xml  methanol.xml  water.xml
FAIRFluids/data/csvs/: Methods_quality.csv  exp_ChCl.csv  exp_ChCl_glycerol.csv  exp_ChCl_urea.csv  exp_N,N-diethylethanol ammonium chloride_ethylene glycol.csv  exp_N,N-diethylethanol ammonium chloride_glycerol.csv  exp_glycerol.csv  exp_glycerol_DOI1.csv  (+4 more)
FAIRFluids/schemes/: mermaid.md
FAIRFluids/specifications/: model.md  test.ipynb
FAIRFluids/test/: fairfluids_model.json  test copy.ipynb  test.ipynb
Workflows/: 0_Basic_FF_Creation.ipynb  1_CSV_to_FAIRFluids_Example copy 2.ipynb  1_CSV_to_FAIRFluids_Example copy.ipynb  1_CSV_to_FAIRFluids_Example.ipynb  2_CML_to_FF copy.ipynb  2_CML_to_FF.ipynb  3_ThermoML_to_FF.ipynb  4_query_and_visualize.ipynb  Visualize_Fairfluids.ipynb  activation_energy_results_measured.csv  cholinechloride_water.xlsx  df_data_glyceline_ratio_or_pure_water.csv  df_data_viscosity_density.csv  filled.xlsx  glycerol_water.xlsx
Workflows/Workflows color with symbols/: 2_CML_to_FF.ipynb  3_ThermoML_to_FF.ipynb  4_query_and_visualize.ipynb  activation_energy_results_measured.csv  df_data_glyceline_ratio_or_pure_water.csv
Workflows/Workflows_black_white/: 0_Basic_FF_Creation.ipynb  1_CSV_to_FAIRFluids_Example.ipynb  2_CML_to_FF.ipynb  3_ThermoML_to_FF.ipynb  4_query_and_visualize.ipynb  activation_energy_results_measured.csv  df_data.csv  df_data_glyceline_ratio_or_pure_water.csv
Workflows/outputs/: Xu_Glycerol_Water.json  acs.jced.5b01015.json  fluid.2014.07.013.json  glycerol_water_j.jct.2014.06.031.json  j.jct.2012.08.025.json  j.jct.2014.06.031.json  j.jct.2019.05.013.json  j.tca.2013.07.012.json
Workflows/outputs_des_storage/: Betaine_Ethylene_glycol_Water.json  Betaine_Glycerol_Water.json  Cholinchloride_Ethylene_glycol_Water.json  Cholinchloride_Glycerol_Water.json  Lidocaine_Oxalic_acid_Water.json  Tetrabutylammonium_c_Glycerol_Water.json
Workflows/outputs_from_spreadsheet/: Cholinechloride_Water.json  Glycerol_Water.json  glycerol_water.json  water_Cholinechloride_Glycerol.json
Workflows/paper_outputs/: Xu_Glycerol_Water.json  chemical_sample_table_combined.xlsx  create_cst_demo.ipynb  spera_et_al_fpe_592_2025_114324.json
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  fairfluids.baml  resume.baml
core/: fluid_io.py  functionalities.py  visualization.py
data/csvs/: exp_ChCl_glycerol_withpredjournalpaper.csv  exp_ChCl_urea_withmistake.csv  sugar.csv
docs/: API_INVENTORY.md  MIGRATION.md  MODEL_LAYERS.md
fairfluids/: __init__.py  cli.py
fairfluids/ThermoMLMapping/: README.md  __init__.py  conversion_utils.py  test_conversion.ipynb  thermoml_mapper.py
fairfluids/analysis/: __init__.py  bayesian.py  fluids.py
fairfluids/core/: __init__.py  create_cst.py  extended_models.py  fairfluids.py  fluid_io.py  fluid_io_2.py  functionalities.py  lib.py  plot_utils.py  visualization.py  visualization_documentation.md
fairfluids/data/: DES_Storage_exp.csv  joined_viscosity_density.csv
fairfluids/inspection/: __init__.py  create_cst.py  document.py
fairfluids/io/: __init__.py  cml_parser.py  fluid_io.py  pubchem.py  resolve_doi.py
fairfluids/operations/: __init__.py  compounds.py  sample_utils.py
fairfluids/tutorials/: 01_declare_models.ipynb  02_frequentist_fitting.ipynb  03_bayesian_inference.ipynb  04_fluid_selectors.ipynb  _build_notebooks.py  _run_notebooks.py
fairfluids/visualization/: __init__.py  composition.py  core_plots.py  dataframe_api.py  filters.py
jinja/: generated_model.baml  md_to_baml.j2  parser.py
neo4j/: README_Neo4j.md  create_neo4j_graph.py  dump_neo4j.sh  example_cypher_queries.cypher  query_and_visualize.ipynb  restore_neo4j.sh  setup_neo4j.sh  test_neo4j_queries.py
playground/: create_basic_document.ipynb  create_fairfluids_document copy.ipynb  create_fairfluids_document.ipynb  create_fairfluids_documents.py  fairfluids_example.ipynb  test.ipynb  test_ff.ipynb
schemes/: Thermoml.md  expression_mermaid.md  immo_mermaid.md  mermaid.md
specifications/: ThermoML.md  expression.md  immobilisation.md  model.md  model_RDF.md  model_paper.md  thermoml_to_fairfluids_mapping.md
test/: baml.ipynb  pymdmodels_testing.ipynb  test.ipynb  test_baml_parser.py  test_bayesian_smoke.py  test_conda_env.py  test_fairfluids_to_thermoml.py  test_fluids.py  test_installation.py  test_symbolic.py  test_thermoml_api.py  test_thermoml_mapper.py
test/pubchem_extractor/: pubchem.py
test/test/: Sugar.ipynb  fairfluids_doc.json
test_website/: README.md  app.py  requirements.txt  start_website.sh
test_website/templates/: index.html
thermoml/: README.md  README_thermoml_mapper.md  create_minimal_xml.py  example_usage.py  simple_validation.py  thermo.py  thermoml_data.json  thermoml_mapper.py  thermoml_to_fairfluids_converter.py  validate_and_write_xml.py  validation_summary.md
thin_layer/: __init__.py  arrhenius_from_views.py  demo_thin_layer.ipynb  fit_types.py  measurement_views.py  view_filters.py
transition_water/: transition_water.ipynb
(+103 files in other folders)
