[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fairfluids"
version = "0.1.0"
description = "A framework for creating FAIR fluid data documents with standardized metadata"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FAIRChemistry Team", email = "contact@fairchemistry.org"}
]
maintainers = [
    {name = "FAIRChemistry Team", email = "contact@fairchemistry.org"}
]
keywords = ["chemistry", "fluids", "FAIR", "data", "metadata", "thermodynamics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-xml>=2.0.0",
    "lxml>=4.6.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/FAIRChemistry/FAIRFluids"
Documentation = "https://github.com/FAIRChemistry/FAIRFluids#readme"
Repository = "https://github.com/FAIRChemistry/FAIRFluids.git"
Issues = "https://github.com/FAIRChemistry/FAIRFluids/issues"
Changelog = "https://github.com/FAIRChemistry/FAIRFluids/blob/main/CHANGELOG.md"

[project.scripts]
fairfluids = "fairfluids.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fairfluids*"]

[tool.setuptools.package-data]
"fairfluids" = ["*.json", "*.xml", "*.xsd"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=fairfluids",
    "--cov-report=term-missing",
    "--cov-report=html",
]
